// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paste plugin cmd+shift+v pastes plain text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "export interface PasteContent",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Paste plugin cmd+shift+v preserves current formatting when pasting 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "export interface PasteContent",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
